2005-08-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* config/obj-coff.c (obj_coff_weak): Set auxiliary record
	of NT weak externals to IMAGE_WEAK_EXTERN_SEARCH_NOLIBRARY.

2005-08-16  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_set_cpu): Don't select 64-bit based on
	default cpu.

2005-08-15  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_mov_cmp): Fix encoding of i16-bit conditional
	instructions.
	(do_t_mvn_tst, do_t_neg, do_t_shift): Ditto.

2005-08-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* config/tc-ppc.c (parse_cpu): Add -me300 support.
	(md_show_usage): Likewise.
	* doc/c-ppc.texi (PowerPC-Opts): Document it.

2005-08-12 Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (md_parse_option):  Add cpu type z9-109.
	(md_gather_operands): Add support for optional operands.

2005-08-12  Dmitry Diky <diwil@spec.ru>
	* config/tc-msp430.c (msp430_enable_relax): New flag.
	(msp430_enable_polys): Likewise.
	(OPTION_RELAX): New option.
	(OPTION_POLYMORPHS): Likewise.
	(md_longopts): New long options.
	(md_show_usage): Updated.
	(md_parse_option): Add new options handler.
	(msp430_operands): Add check if polymorph insns are enabled.
	(msp430_force_relocation_local): New function.
	(md_apply_fix): Now delete relocs according to new flags combination.
	(msp430_relax_frag): Convert long branches to short branches only if
	flag msp430_enable_relax is set.
	* config/tc-msp430.h (TC_FORCE_RELOCATION_LOCAL): Defined.
	(msp430_force_relocation_local): Likewise.
	* doc/c-msp430.texi: Describe new options.
	
2005-08-11  Ian Lance Taylor  <ian@airs.com>

	* Makefile.am ($(srcdir)/make-gas.com): Remove target.
	(stamp-mk.com): Likewise.
	(EXTRA_DIST): Remove make-gas.com from list.
	(MOSTLYCLEANFILES): Remove stamp-mk.com from list.
	* Makefile.in: Regenerate.

2005-08-11  Hans-Peter Nilsson  <hp@axis.com>

	* subsegs.c (subseg_change): Move declaration of seginfo to before
	first statement.
